--- a/Trending/Trending/Views/TableViewCell/HomeTableViewCell.xib
+++ b/Trending/Trending/Views/TableViewCell/HomeTableViewCell.xib
@@ -12,11 +12,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="HomeTableViewCell" rowHeight="221" id="wP9-LC-Vgy" customClass="HomeTableViewCell" customModule="Trending" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="597" height="90"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="HomeTableViewCell" rowHeight="180" id="wP9-LC-Vgy" customClass="HomeTableViewCell" customModule="Trending" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="597" height="180"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="wP9-LC-Vgy" id="iZx-xZ-Vba">
-                <rect key="frame" x="0.0" y="0.0" width="597" height="90"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wP9-LC-Vgy" id="iZx-xZ-Vba">
+                <rect key="frame" x="0.0" y="0.0" width="597" height="180"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ehB-RT-LcA">
@@ -32,7 +32,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XBl-fD-ZIE">
                         <rect key="frame" x="92" y="12" width="485" height="60"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="retinaface" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wRL-gX-OwP">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="retinaface" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wRL-gX-OwP">
                                 <rect key="frame" x="0.0" y="32.333333333333336" width="400" height="27.666666666666664"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="400" id="3oy-0Q-hdI"/>
@@ -44,7 +44,7 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="temaus" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ra1-yk-9dw">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="temaus" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ra1-yk-9dw">
                                 <rect key="frame" x="0.0" y="0.0" width="300" height="20.333333333333332"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="S48-XT-tJ7"/>
@@ -64,7 +64,7 @@
                             <constraint firstItem="ra1-yk-9dw" firstAttribute="top" secondItem="XBl-fD-ZIE" secondAttribute="top" id="L3b-RV-0dm"/>
                             <constraint firstItem="wRL-gX-OwP" firstAttribute="top" secondItem="ra1-yk-9dw" secondAttribute="bottom" constant="12" id="RtV-UF-uj1"/>
                             <constraint firstItem="ra1-yk-9dw" firstAttribute="leading" secondItem="XBl-fD-ZIE" secondAttribute="leading" id="ZF9-rt-tkK"/>
-                            <constraint firstAttribute="height" constant="60" id="qqC-vl-QSK"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="qqC-vl-QSK"/>
                             <constraint firstAttribute="bottom" secondItem="wRL-gX-OwP" secondAttribute="bottom" id="tqC-id-0F2"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="ra1-yk-9dw" secondAttribute="trailing" id="u04-Om-TQF"/>
                         </constraints>
@@ -73,29 +73,29 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="KJg-7j-QG1">
-                        <rect key="frame" x="100" y="84" width="0.0" height="0.0"/>
+                        <rect key="frame" x="100" y="84" width="0.0" height="84"/>
                         <subviews>
-                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The remake of https://github.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="se1-IV-ZdK">
-                                <rect key="frame" x="0.0" y="0.0" width="477" height="0.0"/>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The remake of https://github.com" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="se1-IV-ZdK">
+                                <rect key="frame" x="0.0" y="84" width="477" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YAU-ff-8aj">
-                                <rect key="frame" x="0.0" y="0.0" width="477" height="36"/>
+                                <rect key="frame" x="0.0" y="84" width="477" height="36"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NBe-5Y-jAJ">
-                                        <rect key="frame" x="0.0" y="0.0" width="82" height="36"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="80" height="36"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle" translatesAutoresizingMaskIntoConstraints="NO" id="yMS-hR-ycj">
-                                                <rect key="frame" x="0.0" y="10" width="16" height="16"/>
+                                                <rect key="frame" x="0.0" y="11" width="14" height="14"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="16" id="GOH-7k-E9h"/>
-                                                    <constraint firstAttribute="width" constant="16" id="fFq-59-sbg"/>
+                                                    <constraint firstAttribute="height" constant="14" id="GOH-7k-E9h"/>
+                                                    <constraint firstAttribute="width" constant="14" id="fFq-59-sbg"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Python" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hJT-cR-FTB">
-                                                <rect key="frame" x="28" y="0.0" width="54" height="36"/>
+                                                <rect key="frame" x="26" y="0.0" width="54" height="36"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -115,7 +115,7 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Llp-SC-Xiw">
-                                        <rect key="frame" x="102.00000000000001" y="0.0" width="59.666666666666671" height="36"/>
+                                        <rect key="frame" x="100.00000000000001" y="0.0" width="59.666666666666671" height="36"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="star" translatesAutoresizingMaskIntoConstraints="NO" id="k3E-J9-Xc1">
                                                 <rect key="frame" x="0.0" y="8" width="20" height="20"/>
@@ -157,9 +157,6 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
-                        </userDefinedRuntimeAttributes>
                     </stackView>
                 </subviews>
                 <constraints>
@@ -191,12 +188,14 @@
                 <userDefinedRuntimeAttribute type="boolean" keyPath="isSkeletonable" value="YES"/>
             </userDefinedRuntimeAttributes>
             <connections>
+                <outlet property="languageContainerView" destination="NBe-5Y-jAJ" id="c4o-m8-K92"/>
                 <outlet property="languageIconImageView" destination="yMS-hR-ycj" id="Ygi-jh-o02"/>
                 <outlet property="languageLabel" destination="hJT-cR-FTB" id="EhA-q7-sjA"/>
                 <outlet property="profileImageView" destination="ehB-RT-LcA" id="wfe-YM-k6T"/>
                 <outlet property="projectDetailContainerView" destination="YAU-ff-8aj" id="5z7-fL-F66"/>
                 <outlet property="projectDetailLabel" destination="se1-IV-ZdK" id="ZRJ-At-SDl"/>
                 <outlet property="projectNameLabel" destination="wRL-gX-OwP" id="xkf-O3-mTR"/>
+                <outlet property="starContainerView" destination="Llp-SC-Xiw" id="B3D-Nl-AVy"/>
                 <outlet property="starCountLabel" destination="knG-aO-UVK" id="yi0-qz-nJf"/>
                 <outlet property="starIconImageView" destination="k3E-J9-Xc1" id="MET-8r-kV2"/>
                 <outlet property="usernameLabel" destination="ra1-yk-9dw" id="IoG-lk-ezU"/>
